fixed icon cell vertical align

--- a/templates/default-bulma/static/styles/style.css
+++ b/templates/default-bulma/static/styles/style.css
@@ -24,3 +24,12 @@ table tbody tr:hover td a.button {
 div#auth_container {
     margin-top: 64px;
 }
+
+
+/* 
+    fix icon vertical alingn
+*/
+
+table span.icon {
+    line-height: 22px !important;
+}
